--- a/margin-and-padding/01-margin-and-padding-1/style.css
+++ b/margin-and-padding/01-margin-and-padding-1/style.css
@@ -7,15 +7,18 @@ body {
   background: pink;
   border: 3px solid blue;
   /* CHANGE ME */
-  padding: 0px;
-  margin: 0px;
+  padding-top: 30px;
+  padding-left: 50px;
+  padding-bottom: 30px;
+  margin-left: 10px;
 }
 
-.two {
+.two{
   background: lightblue;
   border: 3px solid purple;
   /* CHANGE ME */
-  margin-bottom: 0px;
+  margin-bottom: 50px;
+  margin-top: 10px;
 }
 
 .three {
@@ -23,6 +26,6 @@ body {
   border: 3px solid brown;
   width: 200px;
   /* CHANGE ME */
-  padding: 0px;
-  margin-left: 0px;
+  padding: 30px 50px ;
+  margin-left: 300px;
 }
