--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -12,14 +12,28 @@
 }
 
 ul {
-  /* this removes the dots on the list items*/
   list-style-type: none;
 }
 
 a {
-  font-size: 22px;
+  font-size: 28px;
   background: white;
-  padding: 8px;
-  /* this removes the line under the links */
+  padding: 10px;
   text-decoration: none;
+}
+
+
+
+.header {
+  padding: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+ul {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 8px;
 }
