--- a/flex/01-flex-center/style.css
+++ b/flex/01-flex-center/style.css
@@ -1,4 +1,6 @@
+
 .container {
+  display:flex;
   background: dodgerblue;
   border: 4px solid midnightblue;
   width: 400px;
@@ -12,4 +14,7 @@
   border: 6px solid maroon;
   width: 80px;
   height: 80px;
+  margin: auto;
+  
+  
 }
