--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -2,10 +2,34 @@
 you'll learn about it later. */
 @import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap');
 
+.header{
+  display:flex;
+  align-items: center;
+  padding: 0px 10px;
+  
+}
+
+
+.links{
+  display:flex;
+  gap: 15px;
+}
+
+button{
+  margin: 40px;
+  
+}
+
 body {
-  margin: 0;
+  margin: auto;
   background: #eee;
   font-family: Besley, serif;
+}
+.left,.right{
+  display: flex;
+  align-items: center;
+  gap: 16px;  
+  
 }
 
 .header {
@@ -37,11 +61,17 @@ button {
   padding: 8px 24px;
 }
 
+
+.right{
+    margin-left: auto;
+}
+
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
 }
+
 
 ul {
   list-style-type: none;
