--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -5,6 +5,12 @@ html, body {
   
 }
 
+.info{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  }
+
 body {
   font-family: Roboto, sans-serif;
   margin: 0;
@@ -17,12 +23,29 @@ body {
   
 }
 
+.head{
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+
 .modal {
   background: white;
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding-top:20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  gap: 15px;
+  padding-right:20px ;
   
+}
+
+.buttons{
+  display: flex;
+  gap: 4px;
 }
 
 .icon {
@@ -30,7 +53,7 @@ body {
   font-size: 26px;
   font-weight: 700;
   background: lavender;
-  width: 42px;
+  width: 150px;
   height: 42px;
   border-radius: 50%;
   display: flex;
