--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,27 +2,70 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.bodys{
+display:flex;
+height: 500px;
 }
 
 .header {
-  height: 72px;
+  height: 50px;
   background: darkmagenta;
   color: white;
+  font-size: 25px;
+  padding-top: 15px;
+  padding-left: 20px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  /*align-items: center;*/
+  justify-content: center;
+  padding-top: 15px;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
-}
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding-left: 15px;
+  padding-top: 15px;
+  }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  padding: 16px;
+  margin: 16px;
+  width: 300px;
 }
+
+.cards{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+ul{
+  list-style-type: none;
+}
+
+a{
+  text-decoration: none;
+}
+a:link{
+  color:white;
+}
+
+a:visited{
+  color: white;
+}
+
